Chore refactor ES impl